--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
-*.iml
+# Ignore Gradle project-specific cache directory
 .gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+
+# Ignore Gradle build output directory
+build
